--- a/client/src/components/atoms/DashboardContainer/DashboardContainer.css
+++ b/client/src/components/atoms/DashboardContainer/DashboardContainer.css
@@ -1,5 +1,6 @@
 .search-input{
     height: 100%;
+    font-size: .95rem;
     background-color: transparent;
 }
 
@@ -28,17 +29,7 @@
 .dashboard-container{
     padding: 2rem;
     width: 100%;
-    display: flex;
-    flex-direction: column;
-    gap: 2rem;
     height: 100%;
-}
-
-.whitespace-container{
-    width: 100%;
-    height: 250px;
-    background-color: transparent;
-    flex-shrink: 0;
 }
 
 .dashboard-header-container{
@@ -65,9 +56,10 @@
     display: flex;
     gap: 1rem;
     background-color: #ececec;
-    height: 2.25rem;
-    padding: 0 1rem;
-    border-radius: .5rem;
+    height: 2.7rem;
+    padding: 0 1.5rem;
+    border-radius: 5rem;
+    width: 500px;
     transition: .2s;
 }
 
