--- a/client/src/components/atoms/auth/SidebarUserAvatar/SidebarUserAvatar.css
+++ b/client/src/components/atoms/auth/SidebarUserAvatar/SidebarUserAvatar.css
@@ -27,6 +27,17 @@
     font-size: 1.2rem;
 }
 
+.sidebar-user-details-container{
+    display: flex;
+    flex-direction: column;
+    gap: .1rem;
+}
+
+.sidebar-user-avatar-container[data-avatarRounded='true']{
+    font-size: 1rem;
+    background-image: linear-gradient(to top, #5602b6 0%, #9472cdf5 100%);
+}
+
 .sidebar-user-fullname{
     font-size: 1.1rem;
     text-transform: capitalize;
