feat(scene): loading container when a frame is requested to be rendered in the scene

--- a/client/src/components/atoms/form/Select/Select.css
+++ b/client/src/components/atoms/form/Select/Select.css
@@ -105,3 +105,7 @@
     color: #6366F1;
     flex: 0 0 auto;
 }
+
+.rh-select.on-dark .rh-select-trigger{
+    background-color: transparent !important;
+}
