--- a/client/src/assets/stylesheets/general.css
+++ b/client/src/assets/stylesheets/general.css
@@ -17,7 +17,7 @@ html, body{
 }
 
 body{
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
     overflow: hidden;
 }
 
