--- a/client/src/assets/stylesheets/general.css
+++ b/client/src/assets/stylesheets/general.css
@@ -63,3 +63,7 @@ input:-webkit-autofill:hover{
     box-shadow: 0 0 0 1000px #fff inset !important;
     -webkit-text-fill-color: #000 !important;
 }
+
+.MuiSkeleton-root{
+    background-color: rgb(82 82 82 / 11%) !important;
+}
