--- a/client/src/components/atoms/DashboardLayout/DashboardLayout.css
+++ b/client/src/components/atoms/DashboardLayout/DashboardLayout.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     height: 100%;
+    background-color: #0c0c0c;
 }
 
 .dashboard-layout-header-container{
@@ -27,15 +28,15 @@
 }
 
 .badge-container.as-icon-container.over-light-bg{
-    background-color: rgb(225 225 225);
-    color: #212121;
+    color: rgb(225 225 225);
+    border-color: #212121;
 }
 
 .navigation-container{
     display: flex;
     align-items: center;
     gap: .5rem;
-    background-color: #e7e7e7;
+    background-color: #212121;
     width: fit-content;
     border-radius: 5rem;
     padding: 5px;
