--- a/client/src/components/atoms/SimulationCard/SimulationCard.css
+++ b/client/src/components/atoms/SimulationCard/SimulationCard.css
@@ -1,7 +1,24 @@
 .simulation-container{
-    width: 350px;
-    height: 190px;
+    min-width: 470px;
+    min-height: 245px;
+    width: 470px;
+    height: 245px;
     cursor: pointer;
+    position: relative;
+    box-shadow: 0px 0px 1px 0px #cacaca;
+    border-radius: .8rem;
+}
+
+.simulation-cover-container::before{
+    content: '';
+    display: block;
+    width: 100%;
+    height: 100%;
+    border-radius: .8rem;
+    position: absolute;
+    z-index: 300;
+    bottom: 0;
+    background-image: linear-gradient(to top, #0c0c0ca6 0%, #5f5f5f00 100%);
 }
 
 .progress-border-wrapper {
@@ -15,24 +32,27 @@
 
 .simulation-container:not(.has-jobs):hover .simulation-cover-container,
 .simulation-container.is-selected .simulation-cover-container{
-    border: 1px solid rgb(37, 137, 255);
+    outline: 1px solid rgb(37, 137, 255);
 }
 
 .simulation-container:hover .simulation-options-icon-container{
     opacity: 1;
 }
 
+.simulation-cover-container:not(:has(.simulation-image)){
+    border: 1px solid #d9d9d9;
+    background-color: #fbfbfb;
+    box-shadow: 0 0 0px 1px rgb(205 205 205 / 80%);
+}
+
 .simulation-cover-container{
     width: 100%;
-    height: 180px;
+    height: 100%;
     display: flex;
-    border: 1px solid #d9d9d9;
     border-radius: .8rem;
     transition: .1s;
     justify-content: center;
     align-items: center;
-    background-color: #fbfbfb;
-    box-shadow: 0 0 0px 1px rgb(205 205 205 / 80%);
     overflow: hidden;
 }
 
@@ -47,12 +67,18 @@
     padding-top: 1rem;
     display: flex;
     align-items: center;
+    position: absolute;
+    bottom: 2rem;
+    left: 2rem;
     gap: .5rem;
+    width: calc(100% - 4rem);
+    z-index: 30000;
 }
 
 .simulation-caption-title{
     font-weight: 450;
     font-size: 1rem;
+    color: #dadada;
 }
 
 .simulation-image{
@@ -73,7 +99,7 @@
 .simulation-caption-left-bottom-container{
     display: flex;
     align-items: center;
-    color: #555555;
+    color: #999999;
     font-size: .9rem;
     gap: .5rem;
 }
@@ -82,6 +108,7 @@
     font-size: 1.3rem;
     transition: .3s;
     opacity: 0;
+    color: #dadada;
 }
 
 @media screen and (max-width: 768px){
