--- a/client/src/assets/stylesheets/general.css
+++ b/client/src/assets/stylesheets/general.css
@@ -33,11 +33,11 @@ body{
 
 ::-webkit-scrollbar-thumb {
     border-radius: 0.5rem;
-    background-color: #d3d3d3;
+    background-color: #2b2b2b;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-    background-color: #d3d3d3;
+    background-color: #2b2b2b;
 }
 
 i{
