--- a/client/src/components/atoms/DashboardLayout/DashboardLayout.css
+++ b/client/src/components/atoms/DashboardLayout/DashboardLayout.css
@@ -44,15 +44,21 @@
 
 .navigation-item-container{
     display: flex;
+    cursor: pointer;
     align-items: center;
     gap: .5rem;
     padding: .5rem 1.5rem;
+    transition: .1s;
     border-radius: 1rem;
 }
 
 .navigation-item-icon{
     display: none;
     font-size: 1.2rem;
+}
+
+.navigation-item-container:hover:not(.is-selected){
+    opacity: .8;
 }
 
 .navigation-item-container.is-selected{
@@ -71,4 +77,7 @@
 
 .navigation-item-container.is-selected .navigation-item-name{
     color: #212121;
+}
+
+@media screen and (max-width: 768px){
 }
