--- a/client/src/pages/protected/Canvas/Canvas.css
+++ b/client/src/pages/protected/Canvas/Canvas.css
@@ -10,6 +10,15 @@
     align-items: center;
 }
 
+.raster-frames-container{
+    position: absolute;
+    right: 2rem;
+    top: 7rem;
+    max-height: 800px;
+    overflow: scroll;
+
+}
+
 .editor-model-loading-container{
     border-radius: 24px;
     padding: 60px;
@@ -82,6 +91,7 @@
     height: 100vh;
     display: flex;
     justify-content: space-between;
+    user-select: none;
 }
 
 .editor-analyzing-container{
