refactor: Scene3D separation of responsibilities

--- a/client/src/pages/protected/Dashboard/Dashboard.css
+++ b/client/src/pages/protected/Dashboard/Dashboard.css
@@ -402,4 +402,8 @@
     .dashboard-body-left-container{
         width: 100%;
     }
+
+    .dashboard-wrapper-container{
+        flex-direction: column;
+    }
 }
