refactor: improvement to the user experience, bug fixes in the use of PTM in structural identification, and refactoring of the front-end and back-end.

--- a/client/src/components/atoms/auth/SidebarUserAvatar/SidebarUserAvatar.css
+++ b/client/src/components/atoms/auth/SidebarUserAvatar/SidebarUserAvatar.css
@@ -33,7 +33,7 @@
     gap: .1rem;
 }
 
-.sidebar-user-avatar-container[data-avatarRounded='true']{
+.sidebar-user-avatar-container[data-avatarrounded='true']{
     font-size: 1rem;
     background-image: linear-gradient(to top, #5602b6 0%, #9472cdf5 100%);
 }
