--- a/client/src/components/organisms/EditorWidget/EditorWidget.css
+++ b/client/src/components/organisms/EditorWidget/EditorWidget.css
@@ -13,6 +13,12 @@
     flex-direction: column;
     gap: 1rem;
     /*cursor: grab;*/
+    opacity: 1;
+    transition: opacity 500ms ease; 
+}
+
+.editor-floating-container.dimmed {
+    opacity: 0.5;
 }
 
 .editor-floating-container:active {
