--- a/client/src/pages/protected/HeadlessRasterizerView/HeadlessRasterizerView.css
+++ b/client/src/pages/protected/HeadlessRasterizerView/HeadlessRasterizerView.css
@@ -5,7 +5,6 @@
 }
 
 .raster-view-trajectory-name-container{
-    position: absolute;
     top: 1rem;
     left: 1rem;
     background-color: #161616;
@@ -13,16 +12,56 @@
     border-radius: 5rem;
 }
 
-.raster-view-trajectory-name{
+.raster-floating-container{
+    background-color: #161616;
+    position: absolute;
     color: #dadada;
+}
+
+.raster-view-trajectory-playback-container{
+    bottom: 1.5rem;
+    font-size: 1.5rem;
+    border-radius: 5rem;
+    padding: .5rem 1rem;
+    display: flex;
+    gap: .5rem;
+    justify-content: center;
+    align-items: center;
+}
+
+.raster-view-trajectory-play-icon{
+    font-size: 1.8rem;
+}
+
+.raster-view-trajectory-editor-icon-container{
+    right: 1rem;
+    top: 1rem;
+    padding: .8rem 1.5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 5rem;
+    font-size: 1.3rem;
+    gap: .5rem;
+}
+
+.raster-floating-helper-text{
+    font-size: 1rem;
+    font-weight: 500;
+}
+
+.raster-view-trajectory-name{
     text-transform: capitalize;
     font-size: 1rem;
 }
 
 .raster-scenes-container{
-    background-color: #212121;
     height: 100%;
     width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    justify-content: space-between;
     position: relative;
     border-radius: 1rem;
 }
@@ -30,7 +69,10 @@
 .raster-scene-container{
     width: 100%;
     height: 100%;
+    position: relative;
     display: flex;
+    border: 1px solid #161616;
+    border-radius: 1rem;
     justify-content: center;
     align-items: center;
     flex-direction: column;
@@ -40,11 +82,17 @@
     height: 500px;
 }
 
+.raster-scenes-top-container{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    gap: 1rem;
+}
+
 .raster-thumbnails{
-    position: absolute;
+    height: 200px;
     display: flex;
     bottom: 0;
-    padding: .5rem;
     gap: 1rem;
     overflow-x: scroll;
     width: 100%;
@@ -53,14 +101,14 @@
 .raster-thumbnail{
     border: 1px solid #323232;
     border-radius: 1rem;
-    width: 250px;
+    width: 280px;
 }
 
 .raster-analyses-container{
+    width: 280px;
     display: flex;
-    position: absolute;
     gap: 1rem;
-    padding: .5rem;
+    justify-content: space-between;
     flex-direction: column;
     top: 0;
     right: 0;
