--- a/client/src/pages/protected/HeadlessRasterizerView/HeadlessRasterizerView.css
+++ b/client/src/pages/protected/HeadlessRasterizerView/HeadlessRasterizerView.css
@@ -12,6 +12,13 @@
     border-radius: 5rem;
 }
 
+.raster-view-trajectory-frame-container{
+    top: 1.5rem;
+    padding: .8rem 2.5rem;
+    font-size: 1rem;
+    border-radius: 5rem;
+}
+
 .raster-floating-container{
     background-color: #161616;
     position: absolute;
@@ -84,13 +91,12 @@
 
 .raster-scenes-top-container{
     width: 100%;
-    height: 100%;
+    height: 85%;
     display: flex;
     gap: 1rem;
 }
 
 .raster-thumbnails{
-    height: 200px;
     display: flex;
     bottom: 0;
     gap: 1rem;
@@ -98,9 +104,52 @@
     width: 100%;
 }
 
-.raster-thumbnail{
+.raster-analysis-selection-container{
+    top: 1rem;
+    right: 13rem;
+    border-radius: 2rem;
+}
+
+.raster-analysis-selection-container .rh-select-value{
+    font-size: .9rem;
+    font-weight: 500;
+}
+
+.raster-analysis-selection-container .rh-select-trigger{
+    padding: .8rem 1.5rem;
+}
+
+.raster-thumbnail-container{
     border: 1px solid #323232;
     border-radius: 1rem;
+    width: 280px;
+    position: relative;
+    display: flex;
+    cursor: pointer;
+    justify-content: center;
+    align-items: center;
+    transition: .2s;
+}
+
+.raster-thumbnail-container:hover{
+    opacity: .8;
+}
+
+.raster-thumbnail-timestep-container{
+    position: absolute;
+    top: .5rem;
+    right: .5rem;
+    background-color: #323232;
+    padding: .5rem 1rem;
+    border-radius: 5rem;
+}
+
+.raster-thumbnail-timestep{
+    color: #dadada;
+    font-size: .8rem;
+}
+
+.raster-thumbnail{
     width: 280px;
 }
 
